docs: add Mermaid diagrams, and retire the Java 7 ConcurrentHashMap image
GitHub renders Mermaid natively, so the diagrams live in the Markdown next to the text they
explain instead of in a PNG nobody opens. Nine write-ups in docs/diagrams, with the seven most
useful diagrams embedded directly in the README.

The one that mattered most is ConcurrentHashMap. images/ConcurrentMap.png shows the Java 7 design:
a fixed array of segments, each with its own lock, with concurrencyLevel setting how many. That has
not been true since Java 8, which dropped segments entirely and locks individual bins, so
concurrency scales with table size instead of being capped at 16 and concurrencyLevel survives only
as a sizing hint. The README text was corrected earlier; the image was still telling the old story.
Both designs are now drawn side by side and the image is no longer referenced.

Also embedded:

- the thread state machine, with BLOCKED and WAITING annotated, since confusing contention with a
  missed handoff is what costs people the most time in a dump
- a decision tree for picking a queue, carrying the measured numbers
- why a unit test cannot catch instruction reordering: any handshake strong enough to line two
  threads up is itself a barrier and drains the store buffer that produces the effect
- how to find virtual thread pinning, which is invisible in a thread dump
- a questionnaire for concurrency tests that pass while the code is broken, every branch of it
  taken from a real failure in this repository

Each diagram was rendered to SVG with a headless browser before committing, not just parsed.
mermaid.parse accepts things that fail to render, and jsdom cannot render at all because it has no
layout engine and no getBBox. 30 blocks in docs plus 7 in the README, all producing real SVG with
no error diagrams.

Only conservative diagram types are used: flowchart, sequenceDiagram and stateDiagram-v2. Nothing
from the beta set that GitHub's renderer might not carry.